syntax = "proto3";

option java_multiple_files = true; // Protocol Buffers 编译器为每种消息类型生成单独的 Java 文件，而不是单个文件。

package com.zp.proto; // 定义包名称，有助于防止不同项目之间的名称冲突。

service UserService{
  rpc query(UserRequest) returns (UserResponse);
}

message UserRequest{
  string name = 1;
}

message UserResponse{
  string name = 1;
  int32 age = 2;
  string address = 3;
}